--- a/client/about.html
+++ b/client/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.min.css" />
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -18,7 +18,6 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
         <div class="collapse navbar-collapse navbar-right" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto navbar-right">
                 <li class="nav-item">
@@ -38,11 +37,9 @@
             </ul>
         </div>
     </nav>
-
     <div class="container text-justify">
         <h2>About</h2>
-        <p>
-            This project aims to use data from Twitter to get to know <span>the popularity of the most important database engines</span>,
+        <p>This project aims to use data from Twitter to get to know <span>the popularity of the most important database engines</span>,
             according the March 2019 version of the <a href="https://db-engines.com/en/ranking">DB-Engines Ranking</a>. These engines are:
             <ul class="databases">
                 <li>Oracle Database</li>
@@ -57,26 +54,17 @@
                 <li>SQLite</li>
             </ul>
         </p>
-        <p>
-            The main interest is to be able to locate each tweet in a map, according to the tweet's or the user's location 
-            and to the topic (database engine) they refer to.
-        </p>
-        <p>
-            For this purpose, <span>Kafka</span> and <span>Spark Streaming</span> are used to process, transform and store data 
+        <p>The main interest is to be able to locate each tweet in a map, according to the tweet's or the user's location 
+            and to the topic (database engine) they refer to.</p>
+        <p>For this purpose, <span>Kafka</span> and <span>Spark Streaming</span> are used to process, transform and store data 
             in <span>Elasticsearch</span> and <span>MongoDB</span> databases.
-            Besides, <span>Leaflet.js</span> is the framework the map is developed with.
-        </p>
-        <p>
-            All the app is deployed with <span>Node.js</span>, alongside with the API where registered users can make their own requests to get the stored data.
-            You can know more about the API <a href="api.html">here</a>.
-        </p>
-        <p>
-            You can find all the code of the project and the instructions to run it on your own on this 
+            Besides, <span>Leaflet.js</span> is the framework the map is developed with.</p>
+        <p>All the app is deployed with <span>Node.js</span>, alongside with the API where registered users can make their own requests to get the stored data.
+            You can know more about the API <a href="api.html">here</a>.</p>
+        <p>You can find all the code of the project and the instructions to run it on your own on this 
             <a href="https://github.com/francisgalvez/twitter-analysis">GitHub repo</a>. Feel free to customize the Twitter topics or hashtags
-            you want to filter the tweets by.
-        </p>
+            you want to filter the tweets by.</p>
     </div>
-
     <footer class="footer">
         <div class="text-center container">
             <p class="text-muted">Made with ❤️ by Francis Gálvez.</p>
