--- a/client/api.html
+++ b/client/api.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.min.css" />
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -18,7 +18,6 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
         <div class="collapse navbar-collapse navbar-right" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto navbar-right">
                 <li class="nav-item">
@@ -32,26 +31,20 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-block btn-social btn-github" href="https://github.com/francisgalvez/twitter-analysis">
-                        <span class="fa fa-github"></span> See on GitHub
-                    </a>
+                        <span class="fa fa-github"></span> See on GitHub</a>
                 </li>
             </ul>
         </div>
     </nav>
-
     <section class="section text-justify">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
                     <h2>API Documentation</h2>
                     <div>
-                        <p>
-                            ¡Welcome to our API documentation!
-                        </p>
-                        <p>
-                            Through this documentation you will be able to register in our system, get your API Key and start performing requests
-                            to know more about the popularity of database engines on Twitter.
-                        </p>  
+                        <p>¡Welcome to our API documentation!</p>
+                        <p>Through this documentation you will be able to register in our system, get your API Key and start performing requests
+                            to know more about the popularity of database engines on Twitter.</p>  
                     </div>
                 </div>
             </div>
@@ -86,8 +79,7 @@
                     <h4>Get located or not located tweets</h4><hr>
                     <div class="content">
                         <p>You might want to just get certain tweets regarding the existance of their location.
-                            You can do it with the following request:
-                        </p>
+                            You can do it with the following request:</p>
                         <pre><code>http://localhost:3000/api/tweets/geolocation/:option</code></pre>
                         <p>The "option" field takes a boolean value, where:</p>
                         <ul class="operators">
@@ -105,8 +97,7 @@
                         <pre><code>http://localhost:3000/api/tweets//topics/:topiclist/condition/:operator/geolocation/:option</code></pre>
                         <p>Apart from the geolocation parameter, which we explained in the previous section, you can add a list 
                             of topics according to the database engines you want to know about. In this sense, there are two possible
-                            operators:
-                        </p>
+                            operators:</p>
                         <ul class="operators">
                             <li><code>and</code>: implies an AND condition, which means that all the topics from the 
                                 <code>topiclist</code> parameter should be present in all the returned tweets.
@@ -153,10 +144,8 @@
                 <div class="col-sm-12">
                     <h4>Get filtered tweets since certain hours</h4><hr>
                     <div class="content">
-                        <p>
-                            This call to the API is similar to the <a href="#filtered">"Get filtered tweets" request</a>, but with
-                            the hours parameter added, just like we saw in the previous section.
-                        </p>
+                        <p>This call to the API is similar to the <a href="#filtered">"Get filtered tweets" request</a>, but with
+                            the hours parameter added, just like we saw in the previous section.</p>
                         <pre><code>http://localhost:3000/api/tweets//topics/:topiclist/condition/:operator/geolocation/:option/since/:hours</code></pre>
                     </div>
                 </div>
@@ -166,15 +155,13 @@
                     <h4>Number of tweets per request</h4><hr>
                     <div class="content">
                         <p>By default, the number of documents retrieved per request is 10. But don't worry! You can extend that number up to 10.000 just by adding
-                            the size parameter to the base URL. Here's an example, which would return 100 results:
-                        </p>
+                            the size parameter to the base URL. Here's an example, which would return 100 results:</p>
                         <pre><code>http://localhost:3000/api/tweets/all?size=100</code></pre>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
     <footer class="footer">
         <div class="text-center container">
             <p class="text-muted">Made with ❤️ by Francis Gálvez.</p>
