--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/MarkerCluster.css" />
     <link rel="stylesheet" type="text/css" href="css/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="css/leaflet.awesome-markers.css">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css"/>
     <link rel="stylesheet" href="css/leaflet-search.css"/>
@@ -34,7 +34,6 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
         <div class="collapse navbar-collapse navbar-right" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto navbar-right">
                 <li class="nav-item active">
@@ -48,14 +47,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-block btn-social btn-github" href="https://github.com/francisgalvez/twitter-analysis">
-                        <span class="fa fa-github"></span> See on GitHub
-                    </a>
+                    <span class="fa fa-github"></span> See on GitHub</a>
                 </li>
             </ul>
         </div>
     </nav>
-
     <div id="map"></div>
-    <script src="js/map.loader.js"></script>
+    <script src="js/map.loader.min.js"></script>
 </body>
 </html>
