Añadido target=_blank

--- a/client/api.html
+++ b/client/api.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">API</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-block btn-social btn-github" href="https://github.com/francisgalvez/twitter-analysis">
+                    <a class="nav-link btn btn-block btn-social btn-github" href="https://github.com/francisgalvez/twitter-analysis" target="_blank">
                         <span class="fa fa-github"></span> See on GitHub</a>
                 </li>
             </ul>
