--- a/client/index.html
+++ b/client/index.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="api.html">API</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-block btn-social btn-github" href="https://github.com/francisgalvez/twitter-analysis">
+                    <a class="nav-link btn btn-block btn-social btn-github" href="https://github.com/francisgalvez/twitter-analysis" target="_blank">
                     <span class="fa fa-github"></span> See on GitHub</a>
                 </li>
             </ul>
