Modificaciones en las rutas

--- a/client/index.html
+++ b/client/index.html
@@ -40,10 +40,10 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="api.html">API</a>
+                    <a class="nav-link" href="/api">API</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-block btn-social btn-github" href="https://github.com/francisgalvez/twitter-analysis" target="_blank">
