--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/api">API</a>
+                    <a class="nav-link" href="/api/docs">API</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-block btn-social btn-github" href="https://github.com/francisgalvez/twitter-analysis" target="_blank">
