--- a/client/about.html
+++ b/client/about.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/api/docs">API</a>
+                    <a class="nav-link" href="/apidocs">API</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-block btn-social btn-github" href="https://github.com/francisgalvez/twitter-analysis" target="_blank">
