--- a/client/api.html
+++ b/client/api.html
@@ -31,7 +31,8 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-block btn-social btn-github" href="https://github.com/francisgalvez/twitter-analysis" target="_blank">
-                        <span class="fa fa-github"></span> See on GitHub</a>
+                        <span class="fa fa-github"></span> See on GitHub
+                    </a>
                 </li>
             </ul>
         </div>
